Convert app to PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Zerreta NEET",
+  "name": "Zerreta NEET Learning Platform",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,18 +8,22 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "zer-logo.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "zer-logo1.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#7445f8",
+  "background_color": "#ffffff",
+  "description": "An advanced learning platform for NEET preparation",
+  "orientation": "portrait-primary",
+  "categories": ["education", "learning", "productivity"]
 }
