--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.5.0",
+    "katex": "^0.16.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "rehype-katex": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
