--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "rehype-katex": "^7.0.1",
