--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,15 +1,1 @@
-{
-  "projectId": "prj_QWDOdZFKybK0r7ggzXXTLl2Hz2ju",
-  "orgId": "team_7k87LfxfbSQNa5GIYvUiasK0",
-  "settings": {
-    "createdAt": 1742442140400,
-    "framework": "create-react-app",
-    "devCommand": null,
-    "installCommand": "npm install",
-    "buildCommand": "CI=false npm run build",
-    "outputDirectory": null,
-    "rootDirectory": null,
-    "directoryListing": false,
-    "nodeVersion": "22.x"
-  }
-}
+{"projectId":"prj_4RUWD22x8jMP1JMNo7SkM8r3E7bX","orgId":"team_7k87LfxfbSQNa5GIYvUiasK0"}
